--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@astrojs/tailwind": "^0.2.1",
     "@commitlint/cli": "^17.0.2",
     "@commitlint/config-conventional": "^17.0.2",
+    "@lbyteperu/lbyte-ui-library": "^1.0.17",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
     "@types/react": "^18.0.12",
