--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,3 @@
-/registry.npmjs.org/:_authToken=${NPM_TOKEN}
+registry=https://registry.npmjs.org/
+@lbyteperu:registry=https://npm.pkg.github.com/
+//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
