--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+    "@mui/icons-material": "^5.14.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
     "@types/node": "^18.11.5",
     "@types/react": "^18.0.23",
@@ -42,7 +43,12 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@lbyteperu/lbyte-ui-library": "^1.0.17",
+    "@mui/material": "^5.14.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0"
   }
 }
